# archex

./: .gitignore  AGENTS.md  Cargo.toml  README.md
scripts/: test_mcp.sh
src/: main.rs
src/cli/: check.rs  decision.rs  init.rs  mod.rs  rule.rs  serve.rs  setup.rs
src/core/: db.rs  mcp.rs  mod.rs  parser.rs  rule_engine.rs
