[package]
name = "archex"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "0.8"
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
walkdir = "2.5"
glob = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1.10"